--- a/Security/Security.csproj
+++ b/Security/Security.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlSanitizer" Version="7.1.542" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="3.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
