--- a/Performance/Performance.csproj
+++ b/Performance/Performance.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.2.0" />
+    <PackageReference Include="WebMarkupMin.AspNetCore5" Version="2.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\ResponseCompression\" />
+  </ItemGroup>
+
 </Project>
